Footnote contrast fixed.

--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ body {
 }
 
 .c-info {
-    color: #999;
+    color: #6e6e6e;
     font-size: .4em;
     grid-column: 1/1;
     grid-row: 4/5;
